--- a/lesson-11/index.html
+++ b/lesson-11/index.html
@@ -10,35 +10,35 @@
 <body>
 <header class="header">
     <div class="header__container">
-        <div class="header-logo">
-            <img class="header-logo__image" src="img/header-logo.png" alt="Icon logo">
+        <div class="logo-header">
+            <img class="logo-header__image" src="img/header-logo.png" alt="Icon logo">
         </div>
-        <ul class="header-menu list">
+        <ul class="menu-header list">
             <li class="list__item">
-                <a class="header-menu__link" href="#">Shop</a>
+                <a class="menu-header__link" href="#">Shop</a>
             </li>
             <li class="list__item">
-                <a class="header-menu__link" href="#">Men</a>
+                <a class="menu-header__link" href="#">Men</a>
             </li>
             <li class="list__item">
-                <a class="header-menu__link" href="#">Women</a>
+                <a class="menu-header__link" href="#">Women</a>
             </li>
             <li class="list__item">
-                <a class="header-menu__link" href="#">Combos</a>
+                <a class="menu-header__link" href="#">Combos</a>
             </li>
             <li class="list__item">
-                <a class="header-menu__link" href="#">Joggers</a>
+                <a class="menu-header__link" href="#">Joggers</a>
             </li>
         </ul>
-        <div class="header-nav icons">
-            <img class="header-nav__search" src="img/icon/search.svg" alt="Search">
-            <a href="#" class="header-nav__favorite">
+        <div class="nav-header icons">
+            <img class="nav-header__search" src="img/icon/search.svg" alt="Search">
+            <a href="#" class="nav-header__favorite">
                 <img class="icons__favorite" src="img/icon/heart.svg" alt="Favorite">
             </a>
-            <a href="#" class="header-nav__user">
+            <a href="#" class="nav-header__user">
                 <img class="icons__user" src="img/icon/user.svg" alt="User">
             </a>
-            <a href="#" class="header-nav__shopping-cart">
+            <a href="#" class="nav-header__shopping-cart">
                 <img class="icons__shopping-cart" src="img/icon/shopping-cart.svg" alt="Shopping cart">
             </a>
         </div>
@@ -46,12 +46,12 @@
 </header>
 <main class="main">
     <div class="main__container">
-        <div class="main-lateral-content">
-            <img class="main-lateral-content__image" src="img/content/content-mini-1.webp" alt="Mini product picture">
-            <img class="main-lateral-content__image" src="img/content/content-mini-2.webp" alt="Mini product picture">
-            <img class="main-lateral-content__image" src="img/content/content-mini-3.webp" alt="Mini product picture">
-            <img class="main-lateral-content__image" src="img/icon/icon-white-arrow-up.svg" alt="Arrow up">
-            <img class="main-lateral-content__image" src="img/icon/icon-black-arrow-down.svg" alt="Arrow down">
+        <div class="lateral-content">
+            <img class="lateral-content__image" src="img/content/content-mini-1.webp" alt="Mini product picture">
+            <img class="lateral-content__image" src="img/content/content-mini-2.webp" alt="Mini product picture">
+            <img class="lateral-content__image" src="img/content/content-mini-3.webp" alt="Mini product picture">
+            <img class="lateral-content__image" src="img/icon/icon-white-arrow-up.svg" alt="Arrow up">
+            <img class="lateral-content__image" src="img/icon/icon-black-arrow-down.svg" alt="Arrow down">
         </div>
         <div class="main-content">
             <div class="main-content__image image-content">
@@ -97,28 +97,28 @@
             </a>
             <img src="img/icon/icon-arrow-left-2.svg" alt="Side arrow">
         </div>
-        <ul class="main-size-list link-size">
-            <li class="main-size-list__item">
+        <ul class="size-list">
+            <li class="size-list__item link-size">
                 <a class="link-size__link" href="#">
                     XS
                 </a>
             </li>
-            <li class="main-size-list__item">
+            <li class="size-list__item link-size">
                 <a class="link-size__link" href="#">
                     S
                 </a>
             </li>
-            <li class="main-size-list__item">
+            <li class="size-list__item link-size">
                 <a class="link-size__link" href="#">
                     M
                 </a>
             </li>
-            <li class="main-size-list__item">
+            <li class="size-list__item link-size">
                 <a class="link-size__link" href="#">
                     L
                 </a>
             </li>
-            <li class="main-size-list__item">
+            <li class="size-list__item link-size">
                 <a class="link-size__link" href="#">
                     XL
                 </a>
@@ -152,28 +152,28 @@
                 $63.00
             </a>
         </div>
-        <!--        Це вже точно через before-->
+        <!--        Для before-->
         <div class="main-decor-element"></div>
-        <ul class="main-nav-list link-list">
-            <li class="main-nav-list__item">
+        <ul class="main-nav-list">
+            <li class="main-nav-list__item link-list">
                 <a href="#" class="link-list__link">
                     <img class="main-nav-list__image" src="img/icon/icon-folders.svg" alt="Icon folders">
                     Secure payment
                 </a>
             </li>
-            <li class="main-nav-list__item">
+            <li class="main-nav-list__item link-list">
                 <a href="#" class="link-list__link">
                     <img class="main-nav-list__image" src="img/icon/icon-clothing.svg" alt="Icon clothing size">
                     Size & Fit
                 </a>
             </li>
-            <li class="main-nav-list__item">
+            <li class="main-nav-list__item link-list">
                 <a href="#" class="link-list__link">
                     <img class="main-nav-list__image" src="img/icon/icon-transport.svg" alt="Icon transport">
                     Free shipping
                 </a>
             </li>
-            <li class="main-nav-list__item">
+            <li class="main-nav-list__item link-list">
                 <a href="#" class="link-list__link">
                     <img class="main-nav-list__image" src="img/icon/icon-conect.svg" alt="Icon conect">
                     Free Shipping & Returns
@@ -187,13 +187,13 @@
                 Product Description
             </h2>
         </div>
-        <ul class="main-description__list list">
-            <li class="list__item item-link">
+        <ul class="main-description__nav nav-list">
+            <li class="nav-list__item item-link">
                 <a href="#" class="item-link__link">
                     Description
                 </a>
             </li>
-            <li class="list__item item-link">
+            <li class="nav-list__item item-link">
                 <a href="#" class="item-link__link indicator-item">
                     User comments
                     <span class="indicator-item__number">
@@ -201,7 +201,7 @@
                     </span>
                 </a>
             </li>
-            <li class="list__item item-link">
+            <li class="nav-list__item item-link">
                 <a href="#" class="item-link__link indicator-item">
                     Question & Answer
                     <span class="indicator-item__number">
@@ -210,64 +210,65 @@
                 </a>
             </li>
         </ul>
+        <!--        Для before-->
         <div class="main-decor-element"></div>
-        <p class="main__content-text">
+        <p class="main-description__text list-description">
             100% Bio-washed Cotton – makes the fabric extra soft & silky. Flexible ribbed crew neck. Precisely stitched
             with no pilling & no fading. Provide all-time comfort. Anytime, anywhere. Infinite range of matte-finish HD
             prints.
         </p>
-        <ul class="main-optional-list title-list">
-            <li class="main-optional-list__item">
+        <ul class="main-description__list list">
+            <li class="list__item title-list">
                 <h3 class="title-list__item">
                     Fabric
                 </h3>
-                <p class="main-optional-list__text">
+                <p class="list__text">
                     Bio-washed Cotton
                 </p>
             </li>
-            <li class="main-optional-list__item">
+            <li class="list__item title-list">
                 <h3 class="title-list__item">
                     Pattern
                 </h3>
-                <p class="main-optional-list__text">
+                <p class="list__text">
                     Printed
                 </p>
             </li>
-            <li class="main-optional-list__item">
+            <li class="list__item title-list">
                 <h3 class="title-list__item">
                     Fit
                 </h3>
-                <p class="main-optional-list__text">
+                <p class="list__text">
                     Regular-fit
                 </p>
             </li>
-            <li class="main-optional-list__item">
+            <li class="list__item title-list">
                 <h3 class="title-list__item">
                     Neck
                 </h3>
-                <p class="main-optional-list__text">
+                <p class="list__text">
                     Round Neck
                 </p>
             </li>
-            <li class="main-optional-list__item">
+            <li class="list__item title-list">
                 <h3 class="title-list__item">
                     Sleeve
                 </h3>
-                <p class="main-optional-list__text">
+                <p class="list__text">
                     Half-sleeves
                 </p>
             </li>
-            <li class="main-optional-list__item">
+            <li class="list__item title-list">
                 <h3 class="title-list__item">
                     Style
                 </h3>
-                <p class="main-optional-list__text">
+                <p class="list__text">
                     Casual Wear
                 </p>
             </li>
         </ul>
-        <div class="main-description-side">
-            <div class="main-description-side-media media-block">
+        <div class="main-description__side media-description">
+            <div class="media-description__wrapper media-block">
                 <div class="media-block__time">
                     1:00 M
                 </div>
@@ -408,12 +409,12 @@
     </div>
 </main>
 <footer class="footer">
-    <div class="footer__container">
-        <div class="footer-content">
-            <h5 class="footer-content__title">
+    <div class="footer__container content-footer">
+        <div class="content-footer__wrapper title">
+            <h5 class="title__item">
                 Need Help
             </h5>
-            <ul class="footer-content__list list">
+            <ul class="content-footer__list list">
                 <li class="list-link">
                     <a href="#" class="list-link__link">
                         Contact Us
@@ -440,10 +441,10 @@
                     </a>
                 </li>
             </ul>
-            <h5 class="footer-content__title">
+            <h5 class="content-footer__title">
                 Company
             </h5>
-            <ul class="footer-content__list list">
+            <ul class="content-footer__list list">
                 <li class="list-link">
                     <a href="#" class="list-link__link">
                         About Us
@@ -470,10 +471,10 @@
                     </a>
                 </li>
             </ul>
-            <h5 class="footer-content__title">
+            <h5 class="content-footer__title">
                 More Info
             </h5>
-            <ul class="footer-content__list list">
+            <ul class="content-footer__list list">
                 <li class="list-link">
                     <a href="#" class="list-link__link">
                         Term and Conditions
@@ -495,10 +496,10 @@
                     </a>
                 </li>
             </ul>
-            <h5 class="footer-content__title">
+            <h5 class="content-footer__title">
                 Location
             </h5>
-            <ul class="footer-content__list">
+            <ul class="content-footer__list">
                 <li class="list-location">
                     <p class="list-location__mail">
                         support@euphoria.in
