--- a/lesson-12/index.html
+++ b/lesson-12/index.html
@@ -8,12 +8,12 @@
     <title>Lesson 12</title>
 </head>
 <body>
-<!-----------------------Wrapper------------------------>
+<!--Wrapper-->
 <div class="wrapper">
-    <!-----------------------Header---------------------------->
+<!--    Header-->
     <header class="header">
         <div class="header__container">
-            <!--            First level menu. Menu-->
+<!--            First level menu. Menu-->
             <ul class="menu">
                 <li class="menu__item">
                     <a href="#" class="menu__link">Block 1</a>
@@ -60,7 +60,7 @@
             </ul>
         </div>
     </header>
-    <!---------------------------Main. Page--------------------------->
+<!--    Main. Page-->
     <main class="main">
         <div class="main__page page">
             <div class="page__container">
@@ -169,7 +169,7 @@
                 </div>
             </div>
         </div>
-        <!----------------------Page. Whitecollar-------------------->
+<!--        Page. Whitecollar-->
         <div class="main__page whitecollar">
             <div class="whitecollar__container">
                 <div class="whitecollar__cards-row-up cards">
@@ -323,7 +323,7 @@
             </div>
         </div>
     </main>
-<!---------------------------Footer--------------------------------->
+<!--    Footer-->
     <footer class="footer">
         <div class="footer__container">
             <div class="footer__title title">
