--- a/lesson-12/index.html
+++ b/lesson-12/index.html
@@ -18,8 +18,8 @@
                 <li class="menu__item">
                     <a href="#" class="menu__link">Block 1</a>
                 </li>
-                <li class="menu__item">
-                    <a href="#" class="menu__link">Block 2</a>
+                <li class="menu__item menu__item--hover">
+                    <a href="#" class="menu__link menu__link--after">Block 2 </a>
                     <!--                    Second level menu. Sub-menu-->
                     <ul class="sub-menu">
                         <li class="sub-menu__item">
@@ -28,8 +28,8 @@
                         <li class="sub-menu__item">
                             <a href="#" class="sub-menu__link">Sub block #2</a>
                         </li>
-                        <li class="sub-menu__item">
-                            <a href="#" class="sub-menu__link">Sub block #3</a>
+                        <li class="sub-menu__item sub-menu__item--hover">
+                            <a href="#" class="sub-menu__link sub-menu__link--after">Sub block #3</a>
                             <!--                            Third level menu. Sub-menu-side-->
                             <ul class="sub-menu-side">
                                 <li class="sub-menu-side__item">
@@ -175,7 +175,7 @@
                 <div class="whitecollar__cards-row-up cards">
                     <div class="cards__item same-cards">
                         <div class="cards__image-wrapper image">
-                            <img class="image__item" src="img/photo-example.jpg" alt="Photo">
+                            <img class="image__item" src="img/content/photo-nattasha.jpg" alt="Photo">
                         </div>
                         <div class="cards__social-wrapper social">
                             <a class="social__link" href="#">
