--- a/lesson-12/index.html
+++ b/lesson-12/index.html
@@ -152,7 +152,7 @@
                     </p>
                 </div>
                 <div class="page__image-sticky">
-                    <img src="img/cats-mustache.png" alt="Cats mustache">
+                    <img src="img/cats-mustache.webp" alt="Cats mustache">
                 </div>
                 <div class="page__content">
                     <p>
@@ -175,7 +175,7 @@
                 <div class="whitecollar__cards-row-up cards">
                     <div class="cards__item same-cards">
                         <div class="cards__image-wrapper image">
-                            <img class="image__item" src="img/content/photo-nattasha.jpg" alt="Photo">
+                            <img class="image__item" src="img/content/photo-nattasha.webp" alt="Photo">
                         </div>
                         <div class="cards__social-wrapper social">
                             <a class="social__link" href="#">
@@ -199,7 +199,7 @@
                     </div>
                     <div class="cards__item same-cards">
                         <div class="cards__image-wrapper image">
-                            <img class="image__item" src="img/content/photo-david.jpg" alt="Photo">
+                            <img class="image__item" src="img/content/photo-david.webp" alt="Photo">
                         </div>
                         <div class="cards__social-wrapper social">
                             <a class="social__link" href="#">
@@ -223,7 +223,7 @@
                     </div>
                     <div class="cards__item same-cards">
                         <div class="cards__image-wrapper image">
-                            <img class="image__item" src="img/content/photo-madeleine.jpg" alt="Photo">
+                            <img class="image__item" src="img/content/photo-madeleine.webp" alt="Photo">
                         </div>
                         <div class="cards__social-wrapper social">
                             <a class="social__link" href="#">
@@ -249,7 +249,7 @@
                 <div class="whitecollar__cards-row-down cards">
                     <div class="cards__item same-cards">
                         <div class="cards__image-wrapper image">
-                            <img class="image__item" src="img/content/photo-jonathan.jpg" alt="Photo">
+                            <img class="image__item" src="img/content/photo-jonathan.webp" alt="Photo">
                         </div>
                         <div class="cards__social-wrapper social">
                             <a class="social__link" href="#">
@@ -273,7 +273,7 @@
                     </div>
                     <div class="cards__item same-cards">
                         <div class="cards__image-wrapper image">
-                            <img class="image__item" src="img/content/photo-wanda.jpg" alt="Photo">
+                            <img class="image__item" src="img/content/photo-wanda.webp" alt="Photo">
                         </div>
                         <div class="cards__social-wrapper social">
                             <a class="social__link" href="#">
@@ -297,7 +297,7 @@
                     </div>
                     <div class="cards__item same-cards">
                         <div class="cards__image-wrapper image">
-                            <img class="image__item" src="img/content/photo-austin.jpg" alt="Photo">
+                            <img class="image__item" src="img/content/photo-austin.webp" alt="Photo">
                         </div>
                         <div class="cards__social-wrapper social">
                             <a class="social__link" href="#">
