--- a/lesson-12/index.html
+++ b/lesson-12/index.html
@@ -10,10 +10,10 @@
 <body>
 <!--Wrapper-->
 <div class="wrapper">
-<!--    Header-->
+    <!--    Header-->
     <header class="header">
         <div class="header__container">
-<!--            First level menu. Menu-->
+            <!--            First level menu. Menu-->
             <ul class="menu">
                 <li class="menu__item">
                     <a href="#" class="menu__link">Block 1</a>
@@ -60,7 +60,7 @@
             </ul>
         </div>
     </header>
-<!--    Main. Page-->
+    <!--    Main. Page-->
     <main class="main">
         <div class="main__page page">
             <div class="page__container">
@@ -71,11 +71,13 @@
                 </div>
                 <div class="page__content">
                     <p>
-                        Кіт сві́йський, або кі́шка сві́йська (F. silvestris catus, F. lybica catus або F. catus) — невеликий
+                        Кіт сві́йський, або кі́шка сві́йська (F. silvestris catus, F. lybica catus або F. catus) —
+                        невеликий
                         ссавець ряду хижих родини котових. Сучасна назва походить від латинської назви catus, що
                         використовується для свійського кота, на відміну від дикого, який латиною називається felis.
                         Кіт перебуває в тісному співіснуванні з людиною понад 9500 та є найпоширенішою хатньою твариною.
-                        Поширений у всіх районах земної кулі. Україна за даними 2006 року входила в 10 країн з найбільшою
+                        Поширений у всіх районах земної кулі. Україна за даними 2006 року входила в 10 країн з
+                        найбільшою
                         кількістю населення котів, ставши домом для 7 350 000 домашніх котів, але втратила цей статус.
                         Загалом у світі налічується близько 600 млн (2015 рік) свійських котів, і за останніми
                         дослідженнями, 80 % з них — бродячі.
@@ -89,37 +91,38 @@
                 </div>
                 <div class="page__content">
                     <p>
-                        Кіт сві́йський, або кі́шка сві́йська (F. silvestris catus, F. lybica catus або F. catus) — невеликий
-                        ссавець ряду хижих родини котових. Сучасна назва походить від латинської назви catus, що
-                        використовується для свійського кота, на відміну від дикого, який латиною називається felis.
-                        Кіт перебуває в тісному співіснуванні з людиною понад 9500 та є найпоширенішою хатньою твариною.
-                        Поширений у всіх районах земної кулі. Україна за даними 2006 року входила в 10 країн з найбільшою
-                        кількістю населення котів, ставши домом для 7 350 000 домашніх котів, але втратила цей статус.
-                        Загалом у світі налічується близько 600 млн (2015 рік) свійських котів, і за останніми
-                        дослідженнями, 80 % з них — бродячі.
-                        Налічується кількадесят порід кота свійського.
+                        Існує багато легенд про появу кішки в людському житлі. Одна з них народилася в Індії. Колись
+                        давно кішка жила в лісі разом з тигром. Одного разу тигр занедужав. Кішка зрозуміла, що повинна
+                        знайти вогонь, щоб зігріти тигра. Вогонь був тільки в людини. Кішка прийшла в житло людини
+                        попросити вогню й побачила біля вогнища смачну рибу і рис. Вона не витримала, з'їла все й
+                        розтяглася біля вогню, забувши, навіщо прийшла. Та раптом згадала, схопила палаючу тріску й
+                        побігла назад, до лісу. Розпалюючи вогонь тигрові, кішка зрозуміла, що є зовсім інше життя, і
+                        назавжди повернулася до людини.
                     </p>
                     <p>
-                        Кіт сві́йський, або кі́шка сві́йська (F. silvestris catus, F. lybica catus або F. catus) — невеликий
-                        ссавець ряду хижих родини котових. Сучасна назва походить від латинської назви catus, що
-                        використовується для свійського кота, на відміну від дикого, який латиною називається felis.
-                        Кіт перебуває в тісному співіснуванні з людиною понад 9500 та є найпоширенішою хатньою твариною.
-                        Поширений у всіх районах земної кулі. Україна за даними 2006 року входила в 10 країн з найбільшою
-                        кількістю населення котів, ставши домом для 7 350 000 домашніх котів, але втратила цей статус.
-                        Загалом у світі налічується близько 600 млн (2015 рік) свійських котів, і за останніми
-                        дослідженнями, 80 % з них — бродячі.
-                        Налічується кількадесят порід кота свійського.
+                        З моменту появи кішки поруч із людиною її то обожнювали, то переслідували, приписуючи зв'язок з
+                        нечистою силою та чаклунством. Кішку шанували не тільки в Єгипті та Індії. У Китаї в образі
+                        кішки зображувався бог сільського господарства, у жителів Перу — богиня родючості, в Ісландії
+                        шанувалося божество з котячою головою. Перші християни ставилися до кішок добре. Їх часто
+                        утримували при чоловічих та жіночих монастирях. Деякі дослідники вважають, що в період раннього
+                        Середньовіччя саме монастирі сприяли поширенню цих тварин.
                     </p>
                     <p>
-                        Кіт сві́йський, або кі́шка сві́йська (F. silvestris catus, F. lybica catus або F. catus) — невеликий
-                        ссавець ряду хижих родини котових. Сучасна назва походить від латинської назви catus, що
-                        використовується для свійського кота, на відміну від дикого, який латиною називається felis.
-                        Кіт перебуває в тісному співіснуванні з людиною понад 9500 та є найпоширенішою хатньою твариною.
-                        Поширений у всіх районах земної кулі. Україна за даними 2006 року входила в 10 країн з найбільшою
-                        кількістю населення котів, ставши домом для 7 350 000 домашніх котів, але втратила цей статус.
-                        Загалом у світі налічується близько 600 млн (2015 рік) свійських котів, і за останніми
-                        дослідженнями, 80 % з них — бродячі.
-                        Налічується кількадесят порід кота свійського.
+                        З кінця VIII ст. для котячого племені почалися лихі часи. Вважалося що Сатана може набувати
+                        вигляду чорного кота. Обов'язковим атрибутом шабашів були кішки. Та й самі жінки — відьми
+                        начебто могли перетворюватися на кішок. Можливо, таке уявлення пов'язане з тим, що старі самотні
+                        жінки тримали кішок, були до них прив'язані. Папа Інокентій VII віддав наказ святій інквізиції
+                        переслідувати шанувальників кішок. Король Англії Джеймс І написав книгу про відьом і заснував
+                        посаду Шукача Відьом. Під катуванням або погрозою катування було знайдено безліч свідоцтв
+                        таємничих зв'язків між кішками й чаклунством. Під час семирічного судового процесу над орденом
+                        тамплієрів лицарів під тортурами змушували визнавати, що вони поклонялися ідолові з головою
+                        кішки.
+                    </p>
+                    <p>
+                        Домашні кішки, особливо кошенята, люблять пограти. Насправді для котів гра нагадує полювання,
+                        тому для кошенят вона важлива. Саме в грі вони вчаться полювати. Домашні кішки будуть грати з
+                        речами, які будуть нагадувати здобич. Тобто щось пухнасте і активне. Але іграшка не повинна бути
+                        маленькою, при грі тварина може проковтнути її, а це несе дуже негативні наслідки.
                     </p>
                 </div>
                 <div class="page__block-sticky">
@@ -129,26 +132,29 @@
                 </div>
                 <div class="page__content">
                     <p>
-                        Кіт сві́йський, або кі́шка сві́йська (F. silvestris catus, F. lybica catus або F. catus) — невеликий
-                        ссавець ряду хижих родини котових. Сучасна назва походить від латинської назви catus, що
-                        використовується для свійського кота, на відміну від дикого, який латиною називається felis.
-                        Кіт перебуває в тісному співіснуванні з людиною понад 9500 та є найпоширенішою хатньою твариною.
-                        Поширений у всіх районах земної кулі. Україна за даними 2006 року входила в 10 країн з найбільшою
-                        кількістю населення котів, ставши домом для 7 350 000 домашніх котів, але втратила цей статус.
-                        Загалом у світі налічується близько 600 млн (2015 рік) свійських котів, і за останніми
-                        дослідженнями, 80 % з них — бродячі.
-                        Налічується кількадесят порід кота свійського.
+                        В Японії особливо цінуються триколірні кішки. Японські моряки вірили й дотепер вірять, що така
+                        кішка здатна відганяти злих духів бурі. Мусульмани вірять, що триколірна кішка може вберегти
+                        будинок від пожежі. У багатьох країнах особливо щасливою вважали білу кішку. Людовик XV з
+                        ніжністю ставився до білих ангорок. У нього була така кішка, з якою він не розлучався. У старих
+                        будинках при руйнуванні стін іноді знаходили висохлі трупики кішок. Вони замуровувалися ще при
+                        будівництві, щоб відганяти злих духів. Кішок замуровували, вкладаючи їм у пащі трупики пацюків і
+                        мишей для відлякування гризунів. Мумію кішки знайшли при розбиранні однієї зі стін Лондонського
+                        Тауера. Вік її становив понад 300 років.
                     </p>
                     <p>
-                        Кіт сві́йський, або кі́шка сві́йська (F. silvestris catus, F. lybica catus або F. catus) — невеликий
-                        ссавець ряду хижих родини котових. Сучасна назва походить від латинської назви catus, що
-                        використовується для свійського кота, на відміну від дикого, який латиною називається felis.
-                        Кіт перебуває в тісному співіснуванні з людиною понад 9500 та є найпоширенішою хатньою твариною.
-                        Поширений у всіх районах земної кулі. Україна за даними 2006 року входила в 10 країн з найбільшою
-                        кількістю населення котів, ставши домом для 7 350 000 домашніх котів, але втратила цей статус.
-                        Загалом у світі налічується близько 600 млн (2015 рік) свійських котів, і за останніми
-                        дослідженнями, 80 % з них — бродячі.
-                        Налічується кількадесят порід кота свійського.
+                        Здавна кішку вважають «живим барометром». Якщо кішка лиже передню лапку, пригладжує лапкою
+                        шерсть на голові — бути гарній погоді. Якщо лапкою миє вушка, лижеться — буде негода, сніг. Коли
+                        кішка ховає мордочку — бути морозу; шкребе підлоту — на вітер, заметіль; лежить животом догори,
+                        вивертається — на тепло. Сьогодні майстри сучасної магії у своїх ритуалах використовують кішок,
+                        особливо чорних.
+                    </p>
+                    <p>
+                        Кішки завжди відігравали велике значення в мистецтві. Вперше кішки з'явились в мистецтві
+                        стародавнього Єгипту. Про це свідчать знайдені настінні малюнки і мумії. Пізніше, в Греції,
+                        кішок зображували на 5 грецьких монетах. В стародавньому Римі кішок зображували на мозаїках,
+                        картинах, монетах, щитах і гончарних виробах. Першу картину, на якій кішка була головним
+                        персонажем, намалював Леонардо да Вінчі. Художник Тулуз-Лотрек також іноді малював
+                        кішок. Багато антропоморфних котів малював Луїс Вейн.
                     </p>
                 </div>
                 <div class="page__image-sticky">
@@ -156,20 +162,19 @@
                 </div>
                 <div class="page__content">
                     <p>
-                        Кіт сві́йський, або кі́шка сві́йська (F. silvestris catus, F. lybica catus або F. catus) — невеликий
-                        ссавець ряду хижих родини котових. Сучасна назва походить від латинської назви catus, що
-                        використовується для свійського кота, на відміну від дикого, який латиною називається felis.
-                        Кіт перебуває в тісному співіснуванні з людиною понад 9500 та є найпоширенішою хатньою твариною.
-                        Поширений у всіх районах земної кулі. Україна за даними 2006 року входила в 10 країн з найбільшою
-                        кількістю населення котів, ставши домом для 7 350 000 домашніх котів, але втратила цей статус.
-                        Загалом у світі налічується близько 600 млн (2015 рік) свійських котів, і за останніми
-                        дослідженнями, 80 % з них — бродячі.
-                        Налічується кількадесят порід кота свійського.
+                        Франція, єдина з космічних держав, запускає котів у космос. Кіт Фелікс — перший кіт-космонавт
+                        (1963).
+                        Почесним мером містечка Талкітна (Аляска, США) починаючи з 1997 року беззмінно є кіт на ім'я
+                        Стаббс. На виборах мера (1997) багато жителів були незадоволені кандидатами — політиками, і тому
+                        громадяни вирішили обрати на цю посаду дивне безхвосте кошеня, знайдене в коробці на парковці.
+                        Кожен день Стабс п'є воду з котячою м'ятою з келиха. Ще незвичайний мер має акаунт на Facebook,
+                        де кожен може написати коту лист.
+                        Кіт Саймон отримав медаль Марії Дікін, а також відзнаку «Кіт — відмінник морської служби».
                     </p>
                 </div>
             </div>
         </div>
-<!--        Page. Whitecollar-->
+        <!--        Page. Whitecollar-->
         <div class="main__page whitecollar">
             <div class="whitecollar__container">
                 <div class="whitecollar__cards-row-up cards">
@@ -323,7 +328,7 @@
             </div>
         </div>
     </main>
-<!--    Footer-->
+    <!--    Footer-->
     <footer class="footer">
         <div class="footer__container">
             <div class="footer__title title">
