--- a/lesson-13/index.html
+++ b/lesson-13/index.html
@@ -59,7 +59,7 @@
                         </h2>
                     </div>
                 </div>
-                <div class="example__item part">
+                <div class="example__item part part--3d">
                     <div class="part__example translate3d">
                         <h2>
                             Translate3D
@@ -67,9 +67,23 @@
                     </div>
                 </div>
                 <div class="example__item part">
+                    <div class="part__example multi3d">
+                        <h2>
+                            Multi3d
+                        </h2>
+                    </div>
+                </div>
+                <div class="example__item part part--flip">
                     <div class="part__example flip">
                         <h2>
                             Flip
+                        </h2>
+                    </div>
+                </div>
+                <div class="example__item part part--transform-style">
+                    <div class="part__example transform-style">
+                        <h2>
+                            Transform-style
                         </h2>
                     </div>
                 </div>
